# rtm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LINKS.md  README.md  default.nix  devbox.json  flake.nix  shell.nix
.github/workflows/: rust.yml
.opencode/plans/: 2026-05-12_add-javascriptcore-to-shell-nix.md  2026-05-12_create-agents-md.md  2026-05-12_nix-flake.md  2026-05-12_rtmapp-desktop-file.md  2026-05-13_fix-github-workflow-deps.md  2026-05-13_remove-rtmgui.md
libtodotxt/: Cargo.toml
rtmapp/: AGENTS.md  package-lock.json  package.json  rtmapp.desktop
rtmapp/src/: index.html  main.js  styles.css
rtmapp/src-tauri/: Cargo.toml  tauri.conf.json
rtmapp/src-tauri/src/: lib.rs  main.rs
rtmcli/: AGENTS.md  Cargo.toml
rtmcli/src/: main.rs
rtmcli/tests/: integration_test.rs
rtmgui/: AGENTS.md  Cargo.toml
rtmgui/src/: main.rs
todotxt/: AGENTS.md  Cargo.toml
todotxt/src/: lib.rs  todocontext.rs  todoitem.rs  todolibrary.rs  todopriority.rs  todoproject.rs  todorecurrence.rs
