[package]
name = "rtmgui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26"
egui = "0.26"
todotxt = { path = "../todotxt" }
chrono = "0.4.31"
uuid = "1.18.1"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.14.1"
