[package]
name = "rtmapp"
version = "0.1.0"
description = "Rusty Todo.txt Manager - Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "rtmapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
todotxt = { path = "../../todotxt" }
chrono = "0.4"
dirs = "5"
toml = "0.8"

